Minimal observations API.
